# poti

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists1.txt  Makefile  README.md  boot.lua  build.sh  embed.h  gen.c  impl.c  index.html  l_gl.c  main.c  main.lua  main.lua.0  poti.c  poti.h  poti.old.c  resources.lua
core/: boot.lua  class.lua
core/audio/: music.lua  sound.lua
core/graphics/: canvas.lua  drawable.lua  image.lua
core/manager/: init.lua  resource.lua
core/manager/scene/: init.lua
core/ui/: init.lua
embed/: audio_bank.lua  boot.lua  error.lua  initialize.lua  shader.lua  shader_factory.lua
examples/: teste.ldtk
examples/game/: main.lua
examples/hello/: conf.lua  main.lua
examples/sound/: main.lua
src/: audio.c  event.c  filesystem.c  gamepad.c  graphics.c  joystick.c  keyboard.c  mouse.c  timer.c  window.c
toolchains/: emscripten.cmake  mingw.cmake  osxcross.cmake
